creusot/tests/should_fail/ghost_mapping.stderr
error[creusot]: called Logic function in Ghost context "creusot_contracts::__stubs::fin"
  --> ghost_mapping.rs:11:5
   |
11 |     pearlite! { |_| ^x }
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `pearlite` (in Nightly builds, run with -Z macro-backtrace for more info)

error[creusot]: called Logic function in Ghost context "creusot_contracts::__stubs::fin"
  --> ghost_mapping.rs:21:5
   |
21 |     pearlite! { forall<_x:Int> ^y == 1i32 }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `pearlite` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

